traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Erreur de compilation :
TraversalDiagonal:7: error: not found: value getx
    while(getx()!=i) {
          ^